# VPRO

./: notes_24_01_25.txt
vpro-optimized/: .gitmodules  .project  README.md  fetch_all_mainBranches.sh  fetch_mach_shift_removal.sh  print_status.py  update_all_noBranchSwitch.sh
vpro-optimized/APPS/EISV/cnn_converter/: .gitignore  Makefile  dumpdata.sh  eval.sh  iss_paths.cmake  vpro_config.cmake
vpro-optimized/APPS/EISV/cnn_converter/bif/: bif.cpp  bif.h  misc.h
vpro-optimized/APPS/EISV/cnn_converter/legacy/: README.md
vpro-optimized/APPS/EISV/cnn_converter/netgen/: container_layer.h  conv1d_layer.h  dynamic_axis.h  pointpillars_layer.h  scatter_to_grid.h  slice_layer.h
vpro-optimized/APPS/EISV/cnn_converter/runtime/: Makefile  align_blob_files.py  calc_cnn.cpp  calc_cnn.h  cnn_client.py  cnn_generic.py  cnn_generic_new.py  kernels.h  runtime.cpp  segment_scheduling.cpp  segment_scheduling.h  segment_scheduling_debug.cpp.bak  sim_hex_init_file_gen.py  vpro_functions.h  vpro_functions_statistical.cpp
vpro-optimized/APPS/EISV/cnn_converter/sim/: sim.cpp
vpro-optimized/APPS/EISV/core_verification/: .gitignore  .gitmodules  README.md  init.sh
vpro-optimized/APPS/EISV/core_verification/template/: #howto-ignore-printf  .gitignore  Makefile  convert_hex_to_bin.py  fibonacci.cpp  llvm
vpro-optimized/APPS/EISV/core_verification/test_frameworks/: Makefile  extract_rv_instr_from_assembly.py  extract_rv_instr_risc_v_compliance.py  initPatara.sh  riscv-compliance_assembly_count.csv  riscv-compliance_vpro.patch  runPatara2Weeks.sh  runPataraComplete.sh  run_iss_tests.py
vpro-optimized/APPS/EISV/core_verification/test_frameworks/eisv-target/iss/: .gitignore  CMakeLists.txt  Makefile
vpro-optimized/CORES/EISV/: .gitignore  .library_mapping.xml  README.md
vpro-optimized/CORES/EISV/rtl/: .library_mapping.xml
vpro-optimized/CORES/EISV/rtl/cache/: cache_line_replacer_fifo.vhd  d_cache.vhd  d_cache_multiword.vhd  dcache_ram.vhd  eisV_dma.vhd  i_cache.vhd  instruction_streamer.vhd
vpro-optimized/CORES/EISV/rtl/core/: eisV_aligner.vhd  eisV_alu.vhd  eisV_alu_divide.vhd  eisV_bus_fetcher.vhd  eisV_bus_registered_interface.vhd  eisV_controller.vhd  eisV_core.vhd  eisV_cs_register.vhd  eisV_decoder.vhd  eisV_ex_stage.vhd  eisV_id_stage.vhd  eisV_if_stage.vhd  eisV_instruction_buffer.vhd  eisV_instruction_decompress.vhd  eisV_interrupt_controller.vhd  eisV_mem_stage.vhd  eisV_mult.vhd  eisV_pc_controller.vhd  eisV_register_file_ff.vhd  eisV_wb_stage.vhd
vpro-optimized/CORES/EISV/rtl/package/: eisV_pkg.vhd  eisV_pkg_dummy.vhd  eisV_pkg_units.vhd
vpro-optimized/CORES/VPRO/: .gitignore  LICENSE  Makefile  README.md
vpro-optimized/CORES/VPRO/rtl/: dma_command_gen.vhd  top.vhd
vpro-optimized/CORES/VPRO/rtl/dcma/: ram.vhd  (+11 more)
vpro-optimized/TOOLS/VPRO/ISS/: .gitignore  .gitlab-ci.yml  Makefile  README.md
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/: CMakeLists.txt  Makefile  README.md  fpga_client.py  lib.cnf  main.cpp  main_template.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/: constants.h  helper.h  memory.h  test_env.h  vproOperands.h  vproOperations.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/addressing/: addressing.h  chain_memory.h  lane.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/instructions/: FifoMemory.h  genericInstruction.h  instruction.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/instructions/loadstore/: load.h  loadb.h  loadbs.h  loads.h  loadstore.h  store.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/instructions/processing/: abs.h  add.h  and.h  mach.h  mach_pre.h  macl.h  macl_pre.h  max.h  min.h  mulh.h  mulh_neg.h  mulh_pos.h  mull.h  mull_neg.h  mull_pos.h  mv_mi.h  mv_nz.h  mv_pl.h  mv_ze.h  nand.h  nop.h  nor.h  or.h  processing.h  shift_ar.h  shift_ar_neg.h  shift_ar_pos.h  shift_lr.h  sub.h  xnor.h  xor.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/random/: patara_data_init.h  random_lib.h  xoroshiro128plus.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/includes/testsequences/: ChainingStatus.h  InstructionChainGenerator.h  InstructionSequenceGenerator.h  LaneChainingFifoOut.h  ParallelConflictTest.h  RandomSequenceGenerator.h  TestSequence.h  chains.h
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/init/: init.sh  input.cfg
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/: constants.cpp  helper.cpp  memory.cpp  test_env.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/addressing/: addressing.cpp  chain_memory.cpp  lane.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/instructions/: FifoMemory.cpp  genericInstruction.cpp  instruction.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/instructions/loadstore/: load.cpp  loadb.cpp  loadbs.cpp  loads.cpp  loadstore.cpp  store.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/instructions/processing/: abs.cpp  add.cpp  and.cpp  mach.cpp  mach_pre.cpp  macl.cpp  macl_pre.cpp  max.cpp  min.cpp  mulh.cpp  mulh_neg.cpp  mulh_pos.cpp  mull.cpp  mull_neg.cpp  mull_pos.cpp  mv_mi.cpp  mv_nz.cpp  mv_pl.cpp  mv_ze.cpp  nand.cpp  nop.cpp  nor.cpp  or.cpp  processing.cpp  shift_ar.cpp  shift_ar_neg.cpp  shift_ar_pos.cpp  shift_lr.cpp  sub.cpp  xnor.cpp  xor.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/random/: patara_data_init.cpp  random_lib.cpp  xoroshiro128plus.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/PATARA-based_verification/sources/testsequences/: ChainingStatus.cpp  InstructionChainGenerator.cpp  InstructionSequenceGenerator.cpp  LaneChainingFifoOut.cpp  ParallelConflictTest.cpp  RandomSequenceGenerator.cpp  TestSequence.cpp
vpro-optimized/TOOLS/VPRO/ISS/apps/tests/uichecks/LM_RM/: .gitignore  CMakeLists.txt  README.md  lib.cnf.example  main.cpp
(+646 files in other folders)
